# pre-commit-message-check-hook

./: .pre-commit-hooks.yaml  README.md  setup.cfg
message_check_hook/: check_message.py
