[metadata]
name = commit_message_check_hook
version = 0.2.0
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jazzsewera/pre-commit-message-check-hook
author = Błażej Sewera
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.5.1

[options.entry_points]
console_scripts =
    message-check = message_check_hook.check_message:main

[options.packages.find]
exclude =
    tests*
    testing*
